[gd_scene load_steps=7 format=3 uid="uid://cot4ikvwomjgt"]

[ext_resource type="Script" path="res://Scenes/ui/pause_screen.gd" id="1_7fvoa"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="2_1jopc"]
[ext_resource type="StyleBox" uid="uid://oohuxemtj3rw" path="res://Misc/ButtonHoverStyle.tres" id="3_280u3"]
[ext_resource type="StyleBox" uid="uid://vrw3phfka8cx" path="res://Misc/TooltipStyle.tres" id="4_8skcy"]
[ext_resource type="PackedScene" uid="uid://cc345327cjfso" path="res://Scenes/screens/SettingsScene.tscn" id="5_8pmp1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryrjy"]
bg_color = Color(0.0913, 0.0913, 0.11, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.568627, 0.552941, 0.552941, 1)

[node name="PauseScreen" type="Control"]
process_mode = 2
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 1
script = ExtResource("1_7fvoa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 0.14902)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(700, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.159973
offset_top = -0.039978
offset_right = 0.159973
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ryrjy")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 99.0
offset_right = 605.0
offset_bottom = 499.0
theme_override_constants/separation = 100
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(10, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1jopc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_280u3")
theme_override_styles/hover = ExtResource("3_280u3")
theme_override_styles/pressed = ExtResource("3_280u3")
theme_override_styles/normal = ExtResource("4_8skcy")
text = "Unpause"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1jopc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_280u3")
theme_override_styles/hover = ExtResource("3_280u3")
theme_override_styles/pressed = ExtResource("3_280u3")
theme_override_styles/normal = ExtResource("4_8skcy")
text = "Settings"

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1jopc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_280u3")
theme_override_styles/hover = ExtResource("3_280u3")
theme_override_styles/pressed = ExtResource("3_280u3")
theme_override_styles/normal = ExtResource("4_8skcy")
text = "Abandon Run"

[node name="SettingsScene" parent="." instance=ExtResource("5_8pmp1")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button3" to="." method="_on_abandon_run_pressed"]
